# type2diabetes-RAG

./: .gitattributes  .gitignore  DEPLOYMENT_TESTING_GUIDE.md  Dockerfile  LICENSE  README.md  ablation study.ipynb  ablation_study(10 querys).ipynb  chainlit.en-US.md  config.yaml  env.example  pubmed_fetcher (1).py  pyproject.toml  requirements.txt
.chainlit/: config.toml
app/: app.py  generation.py  retrieval.py
assignment 3/backend/: diabetes_abstracts (1).csv
backend/: DEPLOYMENT.md  Dockerfile  config.py  diabetes_abstracts (2).json  diabetes_abstracts.csv  diabetes_abstracts.json  diabetes_corpus (1).txt  diabetes_corpus.txt  evaluation.py  llm.py  main.py  requirements (1).txt  requirements_backend.txt  retrieval.py
data/: bm25_fixed.pkl
frontend/: Dockerfile  app.py  config.py  requirements_frontend.txt
pipeline/: build_bm25.py  embed_and_upsert.py  prepare_data.py
public/: theme.json
