[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "type2diabetes-rag"
version = "0.1.0"
description = "Type 2 Diabetes RAG - Medical research synthesis via advanced RAG with hybrid retrieval, cross-encoder re-ranking, and PubMed integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "app*", "eval*", "ablation*"]

[tool.ruff]
line-length = 100
target-version = "py310"
